// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationDialog should not render cancel button if onCancel function is not provided 1`] = `
<ForwardRef(Bootstrap(Modal))
  backdrop={false}
  onHide={null}
  show={true}
>
  <ForwardRef(Bootstrap(ModalHeader))
    closeButton={true}
  >
    <ForwardRef(Bootstrap(ModalTitle))>
      Confirm
    </ForwardRef(Bootstrap(ModalTitle))>
  </ForwardRef(Bootstrap(ModalHeader))>
  <ForwardRef(Bootstrap(ModalBody))>
    <p>
      Something happened.
    </p>
  </ForwardRef(Bootstrap(ModalBody))>
  <ForwardRef(Bootstrap(ModalFooter))>
     
    <ForwardRef(Bootstrap(Button))
      className="core-btn"
      disabled={false}
      onClick={[Function]}
      variant="primary"
    >
      OK
    </ForwardRef(Bootstrap(Button))>
  </ForwardRef(Bootstrap(ModalFooter))>
</ForwardRef(Bootstrap(Modal))>
`;

exports[`ConfirmationDialog should render invisible dialog 1`] = `
<ForwardRef(Bootstrap(Modal))
  backdrop={false}
  onHide={[Function]}
  show={false}
>
  <ForwardRef(Bootstrap(ModalHeader))
    closeButton={true}
  >
    <ForwardRef(Bootstrap(ModalTitle))>
      Confirm
    </ForwardRef(Bootstrap(ModalTitle))>
  </ForwardRef(Bootstrap(ModalHeader))>
  <ForwardRef(Bootstrap(ModalBody))>
    <p>
      Do you confirm?
    </p>
  </ForwardRef(Bootstrap(ModalBody))>
  <ForwardRef(Bootstrap(ModalFooter))>
     
    <ForwardRef(Bootstrap(Button))
      className="core-btn"
      disabled={false}
      onClick={[Function]}
      variant="primary"
    >
      OK
    </ForwardRef(Bootstrap(Button))>
    <ForwardRef(Bootstrap(Button))
      className="core-btn"
      disabled={false}
      onClick={[Function]}
    >
      Cancel
    </ForwardRef(Bootstrap(Button))>
  </ForwardRef(Bootstrap(ModalFooter))>
</ForwardRef(Bootstrap(Modal))>
`;

exports[`ConfirmationDialog should render visible dialog with text 1`] = `
<ForwardRef(Bootstrap(Modal))
  backdrop={false}
  onHide={[Function]}
  show={true}
>
  <ForwardRef(Bootstrap(ModalHeader))
    closeButton={true}
  >
    <ForwardRef(Bootstrap(ModalTitle))>
      Confirm
    </ForwardRef(Bootstrap(ModalTitle))>
  </ForwardRef(Bootstrap(ModalHeader))>
  <ForwardRef(Bootstrap(ModalBody))>
    <p>
      Do you confirm?
    </p>
  </ForwardRef(Bootstrap(ModalBody))>
  <ForwardRef(Bootstrap(ModalFooter))>
     
    <ForwardRef(Bootstrap(Button))
      className="core-btn"
      disabled={false}
      onClick={[Function]}
      variant="primary"
    >
      OK
    </ForwardRef(Bootstrap(Button))>
    <ForwardRef(Bootstrap(Button))
      className="core-btn"
      disabled={false}
      onClick={[Function]}
    >
      Cancel
    </ForwardRef(Bootstrap(Button))>
  </ForwardRef(Bootstrap(ModalFooter))>
</ForwardRef(Bootstrap(Modal))>
`;

exports[`ConfirmationDialog should render visible dialog with text and operation in progress 1`] = `
<ForwardRef(Bootstrap(Modal))
  backdrop="static"
  onHide={[Function]}
  show={true}
>
  <ForwardRef(Bootstrap(ModalHeader))
    closeButton={false}
  >
    <ForwardRef(Bootstrap(ModalTitle))>
      Confirm
    </ForwardRef(Bootstrap(ModalTitle))>
  </ForwardRef(Bootstrap(ModalHeader))>
  <ForwardRef(Bootstrap(ModalBody))>
    <p>
      Do you confirm?
    </p>
  </ForwardRef(Bootstrap(ModalBody))>
  <ForwardRef(Bootstrap(ModalFooter))>
    <Spinner
      className="core-spinner"
      size={16}
    />
     
    <ForwardRef(Bootstrap(Button))
      className="core-btn"
      disabled={true}
      onClick={[Function]}
      variant="primary"
    >
      OK
    </ForwardRef(Bootstrap(Button))>
    <ForwardRef(Bootstrap(Button))
      className="core-btn"
      disabled={true}
      onClick={[Function]}
    >
      Cancel
    </ForwardRef(Bootstrap(Button))>
  </ForwardRef(Bootstrap(ModalFooter))>
</ForwardRef(Bootstrap(Modal))>
`;
